Fix alignment issue when validation message is shown.

--- a/src/ui/ToggleShowPassword.css
+++ b/src/ui/ToggleShowPassword.css
@@ -1,34 +1,32 @@
 .toggle-password {
-  position: relative;
+    position: relative;
 }
 
 .toggle-password .form-control {
-  padding-right: calc(24px + 8px + 8px);
+    padding-right: calc(24px + 8px + 8px);
 }
 
 .toggle-password-button {
-  background-color: transparent;
-  bottom: 7px;
-  height: 24px;
-  border: 0;
-  line-height: 0;
-  padding: 0;
-  position: absolute;
-  right: 8px;
-  width: 24px;
+    position: relative;
+    float: right;
+    bottom: 32px;
+    right: 24px;
+    background-color: transparent;
+    border: 0;
 }
 
 .toggle-password-button img {
-  height: 100%;
-  left: 0;
-  object-fit: contain;
-  object-position: center;
-  position: absolute;
-  top: 0;
-  transition: opacity .3s ease;
-  width: 100%;
-  will-change: opacity;
+    height: 24px;
+    width: 24px;
+    transition: opacity .3s ease;
+    will-change: opacity;
+    position: absolute;
 }
 
-.toggle-password-button.show-val .icon-hide {opacity: 0;}
-.toggle-password-button.hide-val .icon-show {opacity: 0;}
+.toggle-password-button.show-val .icon-hide {
+    opacity: 0;
+}
+
+.toggle-password-button.hide-val .icon-show {
+    opacity: 0;
+}
